--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
-#root{
-  background-color: rgb(228, 224, 224);
-  height: 100%;
+#root {
+  background-color: #fff;
+  min-height: 100%;
 }
