--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,6 @@
 html,
 body {
   margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  background: url(bg2.jpg);
+  background: url(bg2.jpg) center / cover no-repeat fixed;
   background-size: cover;
-}
-#root {
-  background-color: #fff;
-  min-height: 100%;
 }
