--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -27,12 +27,13 @@
   font-size: 5em;
   font-family: "Canterbury";
   color: #c2c2c2;
-  padding-top: 30px;
+  padding-top: 10px;
 }
 .home_searchbar {
   padding-left: 25%;
   padding-right: 25%;
-  padding-top: 10px;
+  padding-top: 5px;
+  border-radius: 30px;
 }
 .faze {
   position: absolute;
@@ -40,5 +41,5 @@
   height: 100%;
   width: 100%;
   opacity: 1;
-  background-image: linear-gradient(to top right, #008080 10%, #0071b3e8 70%);
+  background-image: linear-gradient(to top right, #055ca8 10%, #c2c2c2e1 70%);
 }
