--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -3,10 +3,76 @@
   position: relative;
   z-index: 1;
 }
-.autocomplete {
-  /*the container must be positioned relative:*/
+.container {
   position: relative;
+  width: 50px;
+  float: left;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+
+  display: table;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+.autocomplete {
+  position: relative;
+  border: none;
   display: inline-block;
+}
+.filtersbtn:hover {
+  background-color: #a4a4a4;
+}
+.filtersbtn {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
 }
 input {
   border: 1px solid transparent;
@@ -15,7 +81,6 @@ input {
   font-size: 16px;
 }
 input[type="submit"] {
-  background-color: DodgerBlue;
   color: #fff;
 }
 .autocomplete-items {
@@ -24,7 +89,6 @@ input[type="submit"] {
   border-bottom: none;
   border-top: none;
   z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
   top: 100%;
   left: 0;
   right: 0;
@@ -36,38 +100,40 @@ input[type="submit"] {
   border-bottom: 1px solid #d4d4d4;
 }
 .autocomplete-items div:hover {
-  /*when hovering an item:*/
   background-color: #e9e9e9;
 }
 .autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
   background-color: DodgerBlue !important;
   color: #ffffff;
 }
 .homepage {
-  background: url("./bg8.jpg") center / cover no-repeat;
+  background: url("./bg7.jpg") center / cover no-repeat;
   background-size: cover;
   height: 100%;
 }
 .logo {
-  padding-top: 2%;
+  padding-top: 1%;
   width: 200px;
+  height: 200px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  filter: contrast(0.1);
 }
 
 .home_filteroptions {
+  color: #276696;
   margin-left: 25%;
   margin-right: 25%;
+  margin-top: 0;
   width: inherit;
 }
 .home_title {
   text-align: center;
-  font-size: 5em;
-  font-family: "Canterbury";
-  color: #c2c2c2;
+  font-size: 4em;
+  filter: contrast(0.1);
   padding-top: 10px;
+  font-family: fantasy;
 }
 .home_searchbar {
   padding-left: 25%;
@@ -81,5 +147,5 @@ input[type="submit"] {
   height: 100%;
   width: 100%;
   opacity: 1;
-  background-image: linear-gradient(to top right, #055ca8 10%, #c2c2c2e1 70%);
+  background-image: linear-gradient(to top, #276696dc 3%, #276696 60%);
 }
